Users can now GET one reddit post
- The model will now be populated with the top comments for a GET ONE
  request.
- Convert reddits unix timestamp with moment.js to add `created_at` field
