# src/app/controller/pc_sale_controller.ts
@@ -1,14 +1,15 @@
 import * as express from 'express';
 import { Controller, Route, Get, BodyProp, Put, Delete, Tags } from 'tsoa';
-import { PcSaleModel, PcSalePost } from '../model/pc_sales';
+import { PcSaleModel, PcSalePost, PcSaleIndex } from '../model/pc_sales';
+import { Subreddit } from '../services/reddit';
 
 
 @Route('/pc-sales')
 @Tags('Pc Sales')
 export class PcSalesController extends Controller {
-  // GET
+  // Index
   @Get()
-  public async getAll(): Promise<PcSalePost[]> {
+  public async getAll(): Promise<PcSaleIndex[]> {
     try {
       let items:any = await PcSaleModel.find({});
       // docs must have key of id instead of _id
@@ -16,12 +17,35 @@ export class PcSalesController extends Controller {
         return { 
           id: item._id,
           title: item.title,
-          link: item.link
-        }
-      })
+          link: item.link,
+          submissionId: item.submissionId
+        };
+      });
       return items;
     } catch (err) {
       this.setStatus(500);
+      console.error('Caught Error', err);
+    }
+  }
+
+  // Get One 
+  @Get('/{id}')
+  public async getOne(id:string):Promise<PcSalePost>{
+    try {
+      const item:any = await PcSaleModel.findById(id);
+
+      const post:any = {
+        id: item._id,
+        title: item.title,
+        link: item.link, 
+        submissionId: item.submissionId
+      };
+      const comments = await Subreddit.fetchComments(post.submissionId);
+      post.comments = comments;
+
+      return post;
+    }
+    catch(err){
       console.error('Caught Error', err);
     }
   }
