# src/app/controller/pcmr_controller.ts
@@ -1,14 +1,15 @@
 import * as express from 'express';
 import { Controller, Route, Get, BodyProp, Put, Delete, Tags } from 'tsoa';
-import { PcmrModel, PcmrPost } from '../model/pcmr';
+import { PcmrModel, PcmrPost, PcmrIndex } from '../model/pcmr';
+import { Subreddit } from '../services/reddit';
 
 
 @Route('/pcmr')
 @Tags('Pc Master Race')
 export class PCMRController extends Controller {
-  // GET
+  // Index
   @Get()
-  public async getAll(): Promise<PcmrPost[]> {
+  public async getAll(): Promise<PcmrIndex[]> {
     try {
       let items:any = await PcmrModel.find({});
       // mongodb documents have a key of _id instead of id,
@@ -18,12 +19,36 @@ export class PCMRController extends Controller {
           id: item._id,
           title: item.title,
           link: item.link, 
-          img: item.img
+          img: item.img,
+          submissionId: item.submissionId
         }
       })
       return items;
     } catch (err) {
       this.setStatus(500);
+      console.error('Caught Error', err)
+    }
+  }
+
+  // Get One 
+  @Get('/{id}')
+  public async getOne(id:string):Promise<PcmrPost>{
+    try {
+      const item:any = await PcmrModel.findById(id);
+
+      const post:any = {
+        id: item._id,
+        title: item.title,
+        link: item.link, 
+        img: item.img,
+        submissionId: item.submissionId
+      }
+      const comments = await Subreddit.fetchComments(post.submissionId);
+      post.comments = comments;
+
+      return post;
+    }
+    catch(err){
       console.error('Caught Error', err)
     }
   }
