# src/app/model/pc_gaming.ts
@@ -1,9 +1,14 @@
 import * as mongoose from 'mongoose';
 
-interface PcGamingPost {
+interface PcGamingIndex {
   _id: string, 
   title: string, 
-  link: string, 
+  link: string,
+  submissionId: string
+}
+
+interface PcGamingPost extends PcGamingIndex {
+  comments?: Comment
 }
 
 const PcGamingSchema = new mongoose.Schema({
@@ -14,10 +19,14 @@ const PcGamingSchema = new mongoose.Schema({
   link: {
     type: String ,
     required: true
+  },
+  submissionId: {
+    type: String,
+    required: true
   }
 
 })
 
 const PcGamingModel = mongoose.model('pc-gaming', PcGamingSchema)
 
-export { PcGamingModel, PcGamingPost }
+export { PcGamingModel, PcGamingIndex, PcGamingPost }
