# src/app/model/pcmr.ts
@@ -1,11 +1,23 @@
 import * as mongoose from 'mongoose';
 
-interface PcmrPost {
+interface Comment {
+  body: string,
+  author: string,
+  created_at: string
+}
+
+interface PcmrIndex {
   _id: string, 
   title: string, 
   link: string, 
-  img?: string
+  img?: string,
+  submissionId: string
 }
+
+interface PcmrPost extends PcmrIndex {
+  comments?: Comment
+}
+
 
 const PcmrSchema = new mongoose.Schema({
   title: {
@@ -18,10 +30,14 @@ const PcmrSchema = new mongoose.Schema({
   },
   img: {
     type: String
+  },
+  submissionId: {
+    type: String,
+    required: true
   }
 
 })
 
 const PcmrModel = mongoose.model('pcmr', PcmrSchema)
 
-export { PcmrModel, PcmrPost }
+export { PcmrModel, PcmrPost, PcmrIndex }
